# Beany---Template

./: README.md  beanyKeystore  gradle.properties  key  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/release/: output-metadata.json  toc.pb
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/beany/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/beany/: BeannyApp.kt  BeanyApp.kt  MainActivity.kt  Test.xt
app/src/main/java/com/example/nav/: NavGraph.kt
app/src/main/res/drawable/: logo_splash_wrapper.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/beany/: ExampleUnitTest.kt
core/: build.gradle.kts
core/src/main/java/com/example/core/composables/: DropdownFIeld.kt  Footer.kt  GifLoader.kt  InputField.kt  LogoCard.kt  OutlinedText.kt  SvgLoader.kt
core/src/main/java/com/example/core/local/: EasyNotification.kt  NotificationChannel.kt  NotificationWorker.kt
core/src/main/java/com/example/core/network/: NetworkUtils.kt
core/src/main/java/com/example/core/utils/: JsonLoader.kt  (+1 more)
data/: build.gradle.kts
data/src/main/assets/: beany_terms_conditions.json  city-coord.json
data/src/main/java/com/example/data/: CoreTest.kt
domain/: build.gradle.kts
feature/: build.gradle.kts
feature/src/main/assets/: beany_terms_conditions.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+285 files in other folders)
